# MyGIS

./: ListReplica  README.md  pyproject.toml
examples/: .env  check_collaboration_workspace.py  list_sync_enabled_services.py  mygis.toml  mygis.yaml  quick_usage.py  test_collab_items.py  test_compare_records.py  test_list_replicas.py
mygis_core/: AuthProfileMan.py  __init__.py  arcgis_profile_manager.py  auth.py  cli.py  collab.py  config.py  log.py  replicas.py
mygis_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
